feature(add item to cart): add feature to add item to cart

--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -21,7 +21,7 @@
             <span>$ {{ product.discount }}</span>
             }
             <span>$ {{ product.price }}</span>
-            <button class="btn__add_product">+ cart</button>
+            <button (click)="addProductToCart(product)" class="btn__add_product">+ cart</button>
         </div>
     </div>
     }
