feature: added cart components and route to cart

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
-<p class="logo">Coffe Shop</p>
+<p [routerLink]="['/']" class="logo">Coffe Shop</p>
 <div class="menu">
     @if (cartCount(); as count) {
-    <div class="menu_items">
+    <div [routerLink]="['/cart']" class="menu_items">
         <p class="count">{{ count > 0 ? count : '' }}</p>
     </div>
     }
