--- a/src/app/cart/cart-list/cart-list.component.scss
+++ b/src/app/cart/cart-list/cart-list.component.scss
@@ -20,6 +20,15 @@
                 justify-content: space-between;
             }
 
+            select {
+                border: 1px solid #ccc;
+                width: 100%;
+                max-width: 30rem;
+                height: 4rem;
+                border-radius: 1rem;
+                padding: 0 1rem;
+            }
+
             .remove {
                 cursor: pointer;
                 color: white;
